--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,19 @@
 main {
-  margin: 80px auto 200px;
-  max-width: 1590px;
+  margin: 80px 160px 200px;
 }
-@media screen and (max-width: 576px) {
+
+@media screen and (max-width: 992px) {
   main {
     margin: 50px 16px;
+  }
+}
+@media screen and (min-width: 993px) and (max-width: 1200px) {
+  main {
+    margin: 50px 30px;
+  }
+}
+@media screen and (min-width: 1201px) and (max-width: 1440px) {
+  main {
+    margin: 60px 80px 150px;
   }
 }
