--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 footer {
-  margin: 80px auto;
-  max-width: 1590px;
+  margin: 80px 80px;
+  /* max-width: 1590px; */
   background-color: #ffffff;
   border: 2px solid #262626;
   border-radius: 12px;
@@ -37,10 +37,13 @@ footer {
         line-height: 150%;
         color: #4c4c4d;
         margin-bottom: 50px;
+        /* max-width: 520px; */
+        /* margin: 0 auto 50px; */
       }
       .conDiv {
         .iconDiv {
           display: flex;
+          /* justify-content: flex-start; */
           gap: 10px;
           .icon {
             background-color: #fff5f0;
@@ -141,9 +144,9 @@ footer {
   }
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 992px) {
   footer {
-    margin: 80px 16px;
+    margin: 80px 30px;
     padding: 60px 30px 30px;
     .top {
       flex-wrap: wrap;
@@ -169,6 +172,110 @@ footer {
           font-size: 16px;
           margin-bottom: 40px;
           text-align: center;
+        }
+        .conDiv {
+          .iconDiv {
+            display: flex;
+            gap: 10px;
+
+            .icon {
+              width: 32px;
+              height: 32px;
+              text-align: center;
+
+              .iconn {
+                width: 24px;
+                height: 24px;
+              }
+            }
+            p {
+              font-size: 16px;
+              text-align: center;
+            }
+          }
+        }
+      }
+      .FoCon {
+        flex: 1 1 calc(50% - 10px);
+        h5 {
+          font-size: 16px;
+          margin-bottom: 20px;
+        }
+        ul {
+          list-style: none;
+
+          li {
+            font-size: 16px;
+          }
+        }
+      }
+    }
+    .mid {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 16px 0;
+      .rightCon {
+        .rightText {
+          padding-right: 6px;
+          margin-right: 6px;
+          font-size: 14px;
+          white-space: nowrap;
+        }
+        .rightText:last-child {
+          border: none;
+        }
+      }
+      .leftCon {
+        gap: 10px;
+        margin: 20px 0 0;
+        .iconns {
+          width: 44px;
+          height: 44px;
+          padding: 12px;
+
+          .foicon {
+            width: 20px;
+            height: 20px;
+          }
+        }
+      }
+    }
+    .bot {
+      font-size: 14px;
+      margin: 16px 0 0;
+    }
+  }
+}
+@media screen and (min-width: 993px) and (max-width: 1200px) {
+  footer {
+    margin: 80px 16px;
+    padding: 60px 30px 30px;
+    .top {
+      flex-wrap: wrap;
+      width: 100%;
+      .firstCol {
+        flex: 1 1 100%;
+        width: 100%;
+        .logo {
+          display: flex;
+          align-items: center;
+          /* justify-content: center; */
+          gap: 10px;
+          margin-bottom: 16px;
+          img {
+            width: 42px;
+            height: 42px;
+          }
+          h4 {
+            font-weight: bold;
+            font-size: 20px;
+          }
+        }
+        p {
+          font-size: 16px;
+          margin-bottom: 40px;
+          /* text-align: center; */
         }
         .conDiv {
           .iconDiv {
