--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 .header {
-  max-width: 1820px;
+  /* max-width: 1820px; */
   height: 152px;
-  margin: 18px auto 0;
+  margin: 18px 80px 0;
 
   .banner {
     background-color: #ffdecc;
@@ -114,7 +114,7 @@
   }
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 992px) {
   .header {
     margin: 40px 16px 0;
     .banner {
@@ -163,6 +163,7 @@
           width: 28px;
           height: 28px;
           margin: auto;
+          cursor: pointer;
         }
       }
       .menu {
@@ -182,14 +183,205 @@
             a {
               text-decoration: none;
               color: #262626;
-              font-size: 16px;
-              font-weight: 500;
+              font-size: 24px;
+              font-weight: bold;
+              margin-left: 20px;
             }
           }
         }
       }
       .links {
         display: none;
+      }
+    }
+  }
+}
+@media screen and (min-width: 993px) and (max-width: 1200px) {
+  .header {
+    margin: 40px 30px 0;
+    .banner {
+      width: 100%;
+      .leftDesign {
+        width: 50px;
+        height: 50px;
+      }
+      .leftBall {
+        position: absolute;
+      }
+      .rightBall {
+        position: absolute;
+        right: 0;
+      }
+      .rightDesign {
+        width: 50px;
+        height: 50px;
+      }
+      .bannerText {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        p {
+          font-size: 16px;
+          width: fit-content;
+          white-space: nowrap;
+        }
+        .arrow {
+          max-width: 20px;
+          height: 20px;
+        }
+      }
+    }
+    .nav {
+      width: 100%;
+      position: relative;
+      .mobileIcon {
+        display: block;
+        background-color: #ffefe5;
+        padding: 16px 30px;
+        border-left: 2px solid #262626;
+
+        .mobIco {
+          width: 28px;
+          height: 28px;
+          margin: auto;
+          cursor: pointer;
+        }
+      }
+      .menu {
+        position: absolute;
+        top: 80px;
+        right: 0;
+        background-color: #ffdecc;
+        width: 100%;
+        padding-bottom: 10px;
+        border: 2px solid #262626;
+        border-radius: 12px;
+
+        .linkss {
+          margin: 10px;
+          .link {
+            margin-bottom: 10px;
+            a {
+              text-decoration: none;
+              color: #262626;
+              font-size: 24px;
+              font-weight: bold;
+              margin-left: 20px;
+            }
+          }
+        }
+      }
+      .links {
+        display: none;
+      }
+    }
+  }
+}
+@media screen and (min-width: 1201px) and (max-width: 1440px) {
+  .header {
+    /* max-width: 1820px; */
+    height: 152px;
+    margin: 18px 50px 0;
+
+    .banner {
+      background-color: #ffdecc;
+      display: flex;
+      max-width: 100%;
+      height: 60px;
+      border: 2px solid #262626;
+      border-radius: 8px;
+      justify-content: space-between;
+      overflow: hidden;
+      position: relative;
+      margin-bottom: 15px;
+
+      .leftBall {
+        max-width: 72px;
+        max-height: 72px;
+        transform: translateY(-10px);
+        -webkit-transform: translateY(-10px);
+        -moz-transform: translateY(-10px);
+        -ms-transform: translateY(-10px);
+        -o-transform: translateY(-10px);
+      }
+      .rightBall {
+        max-width: 40px;
+        max-height: 40px;
+        transform: translateY(25px);
+        -webkit-transform: translateY(25px);
+        -moz-transform: translateY(25px);
+        -ms-transform: translateY(25px);
+        -o-transform: translateY(25px);
+      }
+      .bannerText {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+        p {
+          font-weight: 500;
+          font-size: 20px;
+          line-height: 150%;
+        }
+        .arrow {
+          max-width: 30px;
+          height: 30px;
+          cursor: pointer;
+        }
+      }
+    }
+    .nav {
+      .logo {
+        background-color: #ff8d4d;
+        max-width: 200px;
+        padding: 0 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-right: 2px solid #262626;
+
+        .img {
+          max-width: 35px;
+          max-height: 35px;
+        }
+
+        a {
+          text-decoration: none;
+          color: #262626;
+          font-weight: bold;
+          font-size: 16px;
+        }
+      }
+      .mobileIcon {
+        display: none;
+      }
+      .links {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+
+        .link {
+          border-left: 2px solid #262626;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          padding: 0 30px;
+
+          a {
+            text-decoration: none;
+            color: #262626;
+            font-size: 16px;
+            font-weight: 500;
+          }
+        }
+        .link.active {
+          background-color: #ffefe5;
+        }
+      }
+      .links .link:last-child {
+        background-color: #ff8d4d;
       }
     }
   }
