--- a/src/components/Main/FaqSec/Faq.module.css
+++ b/src/components/Main/FaqSec/Faq.module.css
@@ -33,6 +33,7 @@
     color: #333333;
     max-width: 992px;
     text-align: center;
+    max-width: 80%;
   }
   .faqQ {
     display: flex;
@@ -90,6 +91,7 @@
     }
     .faqQue.open {
       background-color: #ffffff;
+      /* max-height: 100%; */
       h5 {
         border-bottom: 2px solid #262626;
         width: 100%;
@@ -99,7 +101,7 @@
   }
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 992px) {
   .benefits {
     margin-top: 80px;
     .head {
@@ -114,6 +116,77 @@
     }
     .faqQ {
       flex-direction: column;
+      flex: 1 1 100%;
+      width: 100%;
+      gap: 20px;
+      margin-top: clamp(50px, 5vw, 100px);
+
+      .faqQue {
+        padding: 20px;
+        .que {
+          h5 {
+            font-size: 18px;
+          }
+        }
+        p {
+          font-size: 16px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 993px) and (max-width: 1200px) {
+  .benefits {
+    margin-top: 80px;
+    .head {
+      font-size: 14px;
+    }
+    h3 {
+      font-size: 38px;
+      text-align: center;
+    }
+    p {
+      font-size: 16px;
+    }
+    .faqQ {
+      /* flex-direction: column; */
+      flex: 1 1 40%;
+      /* width: 100%; */
+      gap: 20px;
+      margin-top: clamp(50px, 5vw, 100px);
+
+      .faqQue {
+        padding: 20px;
+        .que {
+          h5 {
+            font-size: 18px;
+          }
+        }
+        p {
+          font-size: 16px;
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 1201px) and (max-width: 1440px) {
+  .benefits {
+    margin-top: 150px;
+    .head {
+      font-size: 16px;
+    }
+    h3 {
+      font-size: 38px;
+      text-align: center;
+    }
+    p {
+      font-size: 16px;
+    }
+    .faqQ {
+      /* flex-direction: column; */
+      flex: 1 1 40%;
+      /* width: 100%; */
       gap: 20px;
       margin-top: clamp(50px, 5vw, 100px);
 
