--- a/src/components/Main/HeroSection/Hero.module.css
+++ b/src/components/Main/HeroSection/Hero.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   gap: 60px;
   .heroImage {
+    width: 100%;
     .image {
       max-width: 765px;
       max-height: 785px;
@@ -63,7 +64,7 @@
     }
   }
 }
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 992px) {
   .hero {
     flex-direction: column;
     gap: 40px;
@@ -85,6 +86,7 @@
       h1 {
         text-align: center;
         font-size: 30px;
+        margin-top: 15px;
       }
       .secondP {
         text-align: center;
@@ -111,6 +113,141 @@
         }
         div:last-child {
           border-bottom: none;
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 993px) and (max-width: 1200px) {
+  .hero {
+    width: 100%;
+    gap: 24px;
+    .heroImage {
+      width: 100%;
+      .image {
+        max-width: 100%;
+        max-height: 100%;
+      }
+    }
+    .heroContent {
+      width: 70%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 10px;
+      .firstP {
+        font-size: 16px;
+      }
+      h1 {
+        text-align: center;
+        font-size: 24px;
+        margin-top: 10px;
+      }
+      .secondP {
+        text-align: center;
+        font-size: 16px;
+        margin-top: 10px;
+      }
+
+      .results {
+        flex-direction: column;
+        align-items: center;
+        /* justify-content: center; */
+
+        gap: 20px;
+        width: 100%;
+        margin-top: 10px;
+        padding: 15px 30px;
+        div {
+          width: 100%;
+          border-bottom: 2px solid #262626;
+          padding-bottom: 10px;
+        }
+        h2 {
+          font-weight: 800;
+          font-size: 24px;
+          line-height: 150%;
+          color: #262626;
+          text-align: center;
+        }
+
+        p {
+          font-size: 16px;
+          white-space: nowrap;
+          text-align: center;
+        }
+        div:last-child {
+          border-bottom: none;
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 1201px) and (max-width: 1440px) {
+  .hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    .heroImage {
+      max-width: 100%;
+      .image {
+        max-width: 100%;
+        max-height: 100%;
+      }
+    }
+    .heroContent {
+      max-width: 50%;
+      .firstP {
+        font-weight: 500;
+        font-size: 18px;
+        border-bottom: 2px solid #262626;
+        width: fit-content;
+      }
+      h1 {
+        font-weight: 800;
+        font-size: 40px;
+        line-height: 130%;
+        font-family: "Raleway", sans-serif;
+        color: #1a1a1a;
+
+        span {
+          color: #ffae80;
+        }
+      }
+      .secondP {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 150%;
+        color: #333333;
+        margin-top: clamp(18px, 5vw, 30px);
+      }
+      .results {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 13px;
+        padding: 24px 50px;
+        border: 2px solid #262626;
+        background-color: #ffefe5;
+        box-shadow: 8px 8px 0px 1px #ffbe99;
+        border-radius: 12px;
+        -webkit-border-radius: 12px;
+        -moz-border-radius: 12px;
+        -ms-border-radius: 12px;
+        -o-border-radius: 12px;
+        margin-top: clamp(40px, 5vw, 60px);
+        h2 {
+          font-weight: 800;
+          font-size: 34px;
+          line-height: 150%;
+          color: #262626;
+        }
+        p {
+          font-weight: 500;
+          font-size: 16px;
+          line-height: 150%;
         }
       }
     }
