--- a/src/components/Main/OurTestimonials/OurTest.module.css
+++ b/src/components/Main/OurTestimonials/OurTest.module.css
@@ -69,13 +69,13 @@
     .testContainer {
       display: flex;
       transform: translateX(calc(-100% * var(--current-test)));
-      margin-left: clamp(0, 5vw, 17%);
+      margin-left: 17%;
 
       .test {
         flex: 0 0 calc(30% - 100px);
         max-width: 100%;
         object-fit: cover;
-        margin-left: clamp(0, 5vw, 50px);
+        margin-left: 50px;
         border: 2px solid #262626;
         background-color: #ffffff;
         border-radius: 12px;
@@ -119,7 +119,7 @@
         }
       }
       .test:nth-child(4) {
-        margin-left: clamp(0, 5vw, 22%);
+        margin-left: 22%;
       }
     }
 
@@ -147,7 +147,7 @@
   }
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 992px) {
   .benefits {
     margin-top: 80px;
     .head {
@@ -175,6 +175,7 @@
         transform: translateX(calc(-100% * var(--current-test)));
         width: 100%;
         gap: 30px;
+        margin-left: 0;
 
         .test {
           flex: 0 0 100%;
@@ -182,6 +183,7 @@
           object-fit: cover;
           overflow: hidden;
           min-height: auto;
+          margin-left: 0;
 
           .testImg {
             max-width: 65px;
@@ -197,11 +199,213 @@
             }
           }
         }
+        .test:nth-child(4) {
+          margin-left: 0;
+        }
       }
       .btnRight {
         position: absolute;
         bottom: 0;
         right: 30%;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 993px) and (max-width: 1200px) {
+  .benefits {
+    margin-top: 80px;
+    .head {
+      font-size: 14px;
+    }
+    h3 {
+      font-size: 38px;
+      text-align: center;
+    }
+    p {
+      font-size: 16px;
+      max-width: 80%;
+    }
+
+    .tes {
+      padding: 0 0 100px;
+
+      .btnLeft {
+        bottom: 0;
+        left: 30%;
+        position: absolute;
+        z-index: 10;
+      }
+      .testContainer {
+        display: flex;
+        transform: translateX(calc(-100% * var(--current-test)));
+        width: 100%;
+        gap: 30px;
+        margin-left: 0;
+
+        .test {
+          flex: 0 0 33.33%;
+          max-width: 100%;
+          object-fit: cover;
+          overflow: hidden;
+          min-height: auto;
+          margin-left: 0;
+          align-items: flex-start;
+
+          .testImg {
+            max-width: 65px;
+            max-height: 65px;
+          }
+          .testText {
+            align-items: flex-start;
+            gap: 20px;
+            h4 {
+              font-size: 20px;
+            }
+            p {
+              font-size: 16px;
+              text-align: left;
+            }
+          }
+        }
+        .test:nth-child(4) {
+          margin-left: 0;
+        }
+      }
+      .btnRight {
+        position: absolute;
+        bottom: 0;
+        right: 30%;
+      }
+    }
+  }
+}
+@media screen and (min-width: 1201px) and (max-width: 1440px) {
+  .benefits {
+    margin-top: 150px;
+    .head {
+      font-size: 16px;
+    }
+    h3 {
+      font-size: 48px;
+      text-align: center;
+    }
+    p {
+      font-size: 16px;
+      max-width: 80%;
+    }
+
+    .tes {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 40px;
+      overflow: hidden;
+      width: 100%;
+      margin-top: clamp(50px, 5vw, 100px);
+      position: relative;
+
+      .btnLeft {
+        width: 58px;
+        height: 58px;
+        border: 2px solid #333333;
+        border-radius: 8px;
+        -webkit-border-radius: 8px;
+        -moz-border-radius: 8px;
+        -ms-border-radius: 8px;
+        -o-border-radius: 8px;
+        background-color: #ffffff;
+        padding: 14px;
+        margin-right: 50px;
+        left: 0;
+        /* bottom: -100px; */
+        cursor: pointer;
+        position: absolute;
+        z-index: 10;
+        .icon {
+          width: 15px;
+          height: 12px;
+        }
+      }
+      .testContainer {
+        display: flex;
+        transform: translateX(calc(-100% * var(--current-test)));
+        /* margin-left: 17%; */
+        position: relative;
+        left: 1%;
+
+        .test {
+          flex: 0 0 calc(30% - 100px);
+          max-width: 100%;
+          object-fit: cover;
+          margin-left: 50px;
+          border: 2px solid #262626;
+          background-color: #ffffff;
+          border-radius: 12px;
+          padding: 40px;
+          box-shadow: 6px 6px 0px 2px #1e1e1e;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          min-height: 375px;
+
+          .testImg {
+            width: 65px;
+            height: 65px;
+            border: 1px solid #333333;
+            border-radius: 50%;
+            margin-bottom: 12px;
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
+          }
+          .testText {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 24px;
+            h4 {
+              font-weight: 700;
+              font-size: 20px;
+              line-height: 150%;
+              color: #333333;
+            }
+            p {
+              font-weight: 500;
+              font-size: 16px;
+              line-height: 150%;
+            }
+          }
+        }
+        .test:nth-child(4) {
+          margin-left: 24%;
+        }
+      }
+
+      .btnRight {
+        width: 58px;
+        height: 58px;
+        border: 2px solid #333333;
+        border-radius: 8px;
+        -webkit-border-radius: 8px;
+        -moz-border-radius: 8px;
+        -ms-border-radius: 8px;
+        -o-border-radius: 8px;
+        background-color: #ffffff;
+        padding: 14px;
+        margin-left: 50px;
+        right: 0;
+        cursor: pointer;
+        position: absolute;
+        z-index: 10;
+        .icon {
+          width: 15px;
+          height: 12px;
+        }
       }
     }
   }
