--- a/src/components/Main/HeroSection/Hero.module.css
+++ b/src/components/Main/HeroSection/Hero.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   gap: 60px;
   .heroImage {
-    width: 100%;
+    /* width: 100%; */
     .image {
       max-width: 765px;
       max-height: 785px;
