--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -175,6 +175,7 @@
         padding-bottom: 10px;
         border: 2px solid #262626;
         border-radius: 12px;
+        z-index: 1000;
 
         .linkss {
           margin: 10px;
@@ -257,6 +258,7 @@
         padding-bottom: 10px;
         border: 2px solid #262626;
         border-radius: 12px;
+        z-index: 1000;
 
         .linkss {
           margin: 10px;
